<resources>
    <string name="app_name">Crypto Diary</string>
    <string name="network_error">Server connection error, please try again later…</string>
    <string name="went_wrong">Something went wrong…</string>
    <string name="common_error">There is a problem right now, please try again later…</string>
    <string name="no_internet_connection">No Internet connection</string>

    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="done">Done</string>
    <string name="app_description">Explore the latest and trending cryptocurrencies and NFTs. Discover important details like prices, projects, and related websites.</string>
    <string name="on_boarding_title_1">Personalized Tracking</string>
    <string name="on_boarding_desc_1">Choose your favorite cryptocurrencies and NFTs to create a personalized tracking list. Monitor your investments closely.</string>
    <string name="on_boarding_title_2">Synchronized Favorites</string>
    <string name="on_boarding_desc_2">Log in and sync your favorite crypto and NFT list across all your devices. Never miss out on your investment opportunities.</string>

    <string name="give_access_write_settings">Please give access to write system settings permissions.</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="favorites">Favorites</string>
    <string name="search">Search…</string>
    <string name="bitcoin_symbol" translatable="false">₿</string>
    <string name="dollar_symbol" translatable="false">$</string>
    <string name="euro_symbol" translatable="false">€</string>
    <string name="eth_symbol" translatable="false">Ξ</string>
    <string name="coin_saved">Coin saved to favorites</string>
    <string name="coin_deleted">Coin deleted to favorites</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="trending_coins">Trending Coins</string>
    <string name="trending_nfts">Trending NFTs</string>
    <string name="genesis_date">Genesis Date:</string>
    <string name="detail">Detail</string>
    <string name="dollar">Dollar</string>
    <string name="euro">Euro</string>
    <string name="bitcoin" translatable="false">Bitcoin</string>
    <string name="etherium" translatable="false">Etherium</string>
    <string name="today">Today</string>
    <string name="_7_days">7 Days</string>
    <string name="_14_days">14 Days</string>
    <string name="_30_days">30 Days</string>
    <string name="_60_days">60 Days</string>
    <string name="_1_year">1 Year</string>
    <string name="back_button">Back button</string>
    <string name="add_remove_to_favorite_button">Add-Remove to favorite button</string>
    <string name="coin_logo">Coin logo</string>
    <string name="nft_logo">Nft logo</string>
    <string name="home_page_button">Home page button</string>
    <string name="discord_button">Discord button</string>
    <string name="twitter_button">Twitter button</string>
    <string name="contract_address">Contract Address</string>
    <string name="all_coins">All Coins</string>
    <string name="return_to_top">Return to top</string>
    <string name="open_settings_button">Open settings button</string>
    <string name="app_logo">App logo</string>
    <string name="choose_a_theme">Choose a theme</string>
    <string name="choose_a_language">Choose a language</string>
    <string name="english" translatable="false">English</string>
    <string name="turkish" translatable="false">Türkçe</string>
    <string name="follow_system_default">Follow System Default</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="are_you_sure_you_want_to_clear_cache">Are you sure you want to clear cache?</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="app_cache_deleted_successfully">App cache deleted successfully</string>
    <string name="open_error">No application can handle this request.</string>
    <string name="successfully_sign_in">Successfully sign in</string>
    <string name="successfully_sign_out">Successfully sign out</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="sign_out">Sign Out</string>
    <string name="language">Language</string>
    <string name="theme">Theme</string>
    <string name="about_us">About Us</string>
    <string name="our_other_apps">Our other apps</string>
    <string name="connect_with_us">Connect with us</string>
    <string name="account">Account</string>
    <string name="closing_price">Closing price for %1$s</string>
    <string name="issever_apps" translatable="false">Issever Apps</string>

</resources>