<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical"
    tools:context=".ui.main.fragments.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_vertical">

        <ImageView
            android:id="@+id/homeAppIcon"
            android:layout_width="40sp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/app_logo" />

        <TextView
            style="@style/BigTitleTextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/app_name" />

        <ImageView
            android:id="@+id/openSettingsButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="7dp"
            android:contentDescription="@string/open_settings_button"
            android:padding="6dp"
            android:src="@drawable/ic_bar_menu" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginVertical="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <android.widget.SearchView
            android:id="@+id/homeSearchView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:iconifiedByDefault="false"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:queryBackground="@android:color/transparent"
            android:queryHint="@string/search" />
    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/homeSwipeRefreshLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.core.widget.NestedScrollView
                android:id="@+id/homeNestedScrollView"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/favoritesLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:visibility="gone"
                        tools:visibility="visible">

                        <TextView
                            style="@style/SmallTitleTextStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginTop="15dp"
                            android:text="@string/favorites" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/favorite_coin_list_recycler_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clipToPadding="false"
                            android:fadingEdgeLength="10dp"
                            android:orientation="horizontal"
                            android:requiresFadingEdge="horizontal"
                            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                            tools:listitem="@layout/item_favorite_coin_list" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/trendingCoinsTitle"
                        style="@style/SmallTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/trending_coins" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/trending_coin_list_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:fadingEdgeLength="10dp"
                        android:orientation="horizontal"
                        android:requiresFadingEdge="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_trending_coin_list" />

                    <TextView
                        android:id="@+id/trendingNftTitle"
                        style="@style/SmallTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:text="@string/trending_nfts" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/trending_nft_list_recycler_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clipToPadding="false"
                        android:fadingEdgeLength="10dp"
                        android:orientation="horizontal"
                        android:requiresFadingEdge="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_nft_list" />

                    <TextView
                        android:id="@+id/allCoinsTitle"
                        style="@style/SmallTitleTextStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="5dp"
                        android:text="@string/all_coins" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/coinListRecyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="15dp"
                        android:clipToPadding="false"
                        android:fadingEdgeLength="10dp"
                        android:orientation="vertical"
                        android:requiresFadingEdge="vertical"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        tools:listitem="@layout/item_coin_list" />

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/homeReturnTopFAB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="25dp"
            app:borderWidth="5dp"
            android:backgroundTint="@color/fab_button_color"
            android:clickable="true"
            android:contentDescription="@string/return_to_top"
            android:src="@drawable/ic_baseline_arrow_upward_24"
            android:visibility="invisible"
            app:tint="@color/white"
            app:backgroundTint="@color/white"/>

    </RelativeLayout>
</LinearLayout>
